<resources>
    <string name="Browser">File browser</string>
    <string name="Curve">Curve</string>
    <string name="MediaControlView_ad_remaining_time">Ad · %1$s remaining</string>
    <string name="MediaControlView_ad_skip_wait_time">You can skip Ad in %1$ds</string>
    <string name="MediaControlView_ad_text">Visit Advertiser</string>
    <string name="MediaControlView_audio_track_none_text">None</string>
    <string name="MediaControlView_audio_track_number_text">Track %1$d</string>
    <string name="MediaControlView_audio_track_text">Audio track</string>
    <string name="MediaControlView_custom_playback_speed_text">%1$.2fx</string>
    <string name="MediaControlView_playback_speed_normal">Normal</string>
    <string name="MediaControlView_playback_speed_text">Playback speed</string>
    <string name="MediaControlView_subtitle_off_text">Off</string>
    <string name="MediaControlView_subtitle_track_number_and_lang_text">Track %1$d - %2$s</string>
    <string name="MediaControlView_subtitle_track_number_text">Track %1$d</string>
    <string name="MediaControlView_time_placeholder">00:00:00</string>
    <string name="MediaControlView_video_quality_auto_text">Auto</string>
    <string name="Standard">Standard</string>
    <string name="a1000_vip_effects_and_materials">1000+ VIP effects and materials</string>
    <string name="a1080p_hd_export">1080P HD export</string>
    <string name="a2k4k_video_edit">2K/4K video edit</string>
    <string name="a3_day_free">3 days free</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_info1">VideoShow</string>
    <string name="about_info3">"VideoShow provides a good video editing experience to users. With minimum operations, you can add the most outstanding effects to your videos. 

 If you have any questions or suggestions, please contact us at videoshow@enjoy-global.com 

 All rights reserved: Shanghai Enjoy Information Technology Co., Ltd"</string>
    <string name="action_feedback_title">Select mailbox</string>
    <string name="action_settings">Settings</string>
    <string name="ad_special_offer">Special offer:</string>
    <string name="add">Add</string>
    <string name="add_all_clips_notice">Select all clips in the folder?</string>
    <string name="add_clip_memory_warn_tip">You have selected too many photos. There is not enough memory.</string>
    <string name="add_font_tip_content">"Copy the font file(.ttf or.otf formats), then paste to the folder 

 sdcard/1videomaker/fonts/"</string>
    <string name="add_font_tip_title">How to add more fonts</string>
    <string name="add_label">Add Label</string>
    <string name="add_local_fonts">Add local fonts</string>
    <string name="add_material_to_video">Add subtitles, effects, stickers and other engaging content to your video.</string>
    <string name="add_more_than_50">Add no more than 50 clips</string>
    <string name="add_mosaic">Add mosaic</string>
    <string name="add_share_tag_tip">Tag your video #FILMIGOapp. You will be noticed by more people!</string>
    <string name="add_text">Text</string>
    <string name="add_video_format">Media type not supported</string>
    <string name="addimg_delete_info">Select at least one clip</string>
    <string name="addimg_ok_clip_info">目前您只有封面，请添加至少一个片段</string>
    <string name="addimg_ok_info">Select at least one clip</string>
    <string name="adjustFood">Food</string>
    <string name="adjustModern">Modern</string>
    <string name="adjustMovie">Movie</string>
    <string name="adjustRetro">Retro</string>
    <string name="adjustStrengthen">Enhance</string>
    <string name="adjust_background_no_effect">The current clip has no background. Adjusting the background will have no effect</string>
    <string name="ads_exit_home_title">Do you want to quit?</string>
    <string name="ads_free_des">Unlock for free</string>
    <string name="ads_free_save">Save %1$s</string>
    <string name="ads_incentive_ad_top_tip">You will get these VIP functions for free</string>
    <string name="ads_restore">Restore</string>
    <string name="advanced_video_adjustment">Advanced video adjustment</string>
    <string name="al_exo_controls_cc_disabled_description">Enable subtitles</string>
    <string name="al_exo_controls_cc_enabled_description">Disable subtitles</string>
    <string name="al_exo_controls_custom_playback_speed">%1$.2fx</string>
    <string name="al_exo_controls_fastforward_description">Fast forward</string>
    <string name="al_exo_controls_fullscreen_enter_description">Enter fullscreen</string>
    <string name="al_exo_controls_fullscreen_exit_description">Exit fullscreen</string>
    <string name="al_exo_controls_hide">Hide player controls</string>
    <string name="al_exo_controls_next_description">Next</string>
    <string name="al_exo_controls_overflow_hide_description">Hide additional settings</string>
    <string name="al_exo_controls_overflow_show_description">Show additional settings</string>
    <string name="al_exo_controls_pause_description">Pause</string>
    <string name="al_exo_controls_play_description">Play</string>
    <string name="al_exo_controls_playback_speed">Speed</string>
    <string name="al_exo_controls_playback_speed_normal">Normal</string>
    <string name="al_exo_controls_previous_description">Previous</string>
    <string name="al_exo_controls_repeat_all_description">Repeat all</string>
    <string name="al_exo_controls_repeat_off_description">Repeat none</string>
    <string name="al_exo_controls_repeat_one_description">Repeat one</string>
    <string name="al_exo_controls_rewind_description">Rewind</string>
    <string name="al_exo_controls_seek_bar_description">Playback progress</string>
    <string name="al_exo_controls_settings_description">Settings</string>
    <string name="al_exo_controls_show">Show player controls</string>
    <string name="al_exo_controls_shuffle_off_description">Shuffle off</string>
    <string name="al_exo_controls_shuffle_on_description">Shuffle on</string>
    <string name="al_exo_controls_stop_description">Stop</string>
    <string name="al_exo_controls_time_placeholder">00:00:00</string>
    <string name="al_exo_controls_vr_description">VR mode</string>
    <string name="al_exo_download_completed">Download completed</string>
    <string name="al_exo_download_description">Download</string>
    <string name="al_exo_download_downloading">Downloading</string>
    <string name="al_exo_download_failed">Download failed</string>
    <string name="al_exo_download_notification_channel_name">Downloads</string>
    <string name="al_exo_download_paused">Downloads paused</string>
    <string name="al_exo_download_paused_for_network">Downloads waiting for network</string>
    <string name="al_exo_download_paused_for_wifi">Downloads waiting for WiFi</string>
    <string name="changelog_setting">Change log</string>
    <string name="cover_origin_file">Overwrite the file</string>
    <string name="delete_select_part">Delete selected part</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="editor_text_dialog_title">Tips</string>
    <string name="export_mode">Export</string>
    <string name="export_output_set">Export video path settings</string>
    <string name="feedback">Feedback</string>
    <string name="gdpr_delete_privacy">Delete Privacy</string>
    <string name="guide">Guide Mode</string>
    <string name="home_adv_edit">Video Edit</string>
    <string name="login_rewards_close_push_tip">Close Notification</string>
    <string name="login_rewards_contents">"Pro features:
1. 2K/4K Video import
2. 1080P HD Video Exporting
3. Unlimited materials download."</string>
    <string name="login_rewards_expired_no">"No, I don't want to purchase FILMIGO PRO"</string>
    <string name="login_rewards_expired_yes">Yes, I want to get PRO features for free</string>
    <string name="login_rewards_first_day_tip">Unlock PRO features for 30 days, with continuous three-day login!</string>
    <string name="login_rewards_last_second_day_tip">You just need 1 day login to unlock</string>
    <string name="login_rewards_purchase_pro_tip">Purchase FILMIGO PRO to remove ads and support the team.</string>
    <string name="login_rewards_title_tip">Continuous login rewards</string>
    <string name="new_file">Create a new file</string>
    <string name="ok">OK</string>
    <string name="p555">Manage Subscription</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="pro_bt_info1">Remind me later</string>
    <string name="pro_bt_info2">No, Thanks</string>
    <string name="rate_please">Do mind rating show support to us you your? We are trying to improve our sevice!</string>
    <string name="set_director_name">修改作者名</string>
    <string name="set_export_mode">Video Export Mode Settings</string>
    <string name="set_face_resolution_info">Shoot resolution setting</string>
    <string name="set_l_info2">Update</string>
    <string name="set_l_info3">About</string>
    <string name="set_quality_info1">Video quality settings</string>
    <string name="set_video_background">Video backgraound color</string>
    <string name="set_watermark">视频片尾</string>
    <string name="setting_app">Application Settings</string>
    <string name="setting_attention_us">Follow us</string>
    <string name="setting_edit_mode">Choose edit mode</string>
    <string name="setting_evaluate">Rate us</string>
    <string name="setting_hw_acc_notification_title">Hardware acceleration</string>
    <string name="setting_language">Language Settings</string>
    <string name="setting_pay">Purchase PRO Version</string>
    <string name="setting_purchase">Purchase</string>
    <string name="setting_recommend_to_friend">Invite your friends</string>
    <string name="settingg_share_friend">Tell a friend</string>
    <string name="text_help_feedback">Feedback and customer service</string>
    <string name="trim_mode">Trim</string>
    <string name="trim_select_part">Trim selected part</string>
    <string name="user_agreement">Terms of Use</string>
    <string name="user_logout">logout</string>
    <string name="wipe_off_watermark">Remove Watermark</string>
</resources>