<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout style="@style/dialog_layout">
        <TextView android:id="@id/textView1" android:text="@string/editor_text_dialog_title" style="@style/dialog_header_text" />
        <TextView android:id="@id/textView2" android:text="@string/rate_please" style="@style/dialog_content_text" />
        <include layout="@layout/split_bottom_line" />
        <LinearLayout android:gravity="center" android:orientation="vertical" android:paddingBottom="@dimen/dialog_pop_padding_size" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <Button android:id="@id/bt_dialog_ok" android:text="@string/ok" style="@style/dialog_button_vertical" />
            <include layout="@layout/split_bottom_line" />
            <Button android:id="@id/bt_dialog_cancel2" android:text="@string/pro_bt_info2" style="@style/dialog_button_vertical" />
            <include layout="@layout/split_bottom_line" />
            <Button android:id="@id/bt_dialog_cancel" android:text="@string/pro_bt_info1" style="@style/dialog_button_vertical" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>