<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/backgroundColor" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/layout_toolbar" />
    <ScrollView android:id="@id/scrollView1" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <LinearLayout android:visibility="gone" style="@style/setting_group_lay">
                <com.xvideostudio.videoeditor.view.RobotoBoldTextView android:text="@string/setting_attention_us" style="@style/setting_group_text" />
            </LinearLayout>
            <LinearLayout android:visibility="gone" android:layout_height="80.0dip" style="@style/setting_lay">
                <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:background="@drawable/ripple_bright_rectangle" android:paddingLeft="20.0dip" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_weight="1.0" android:layoutDirection="locale">
                    <Button android:id="@id/setting_follow_facebook" android:background="@drawable/bg_share_facebook_selector" android:layout_width="@dimen/setting_icon_size" android:layout_height="@dimen/setting_icon_size" android:layout_marginLeft="0.0dip" android:layout_marginRight="@dimen/setting_icon_margin" android:text="" />
                    <Button android:id="@id/setting_follow_instagram" android:background="@drawable/bg_share_instagram_selector" android:layout_width="@dimen/setting_icon_size" android:layout_height="@dimen/setting_icon_size" android:layout_marginLeft="@dimen/setting_icon_margin" android:layout_marginRight="@dimen/setting_icon_margin" android:text="" />
                    <Button android:id="@id/setting_follow_youtube" android:background="@drawable/bg_share_youtube_selector" android:visibility="visible" android:layout_width="@dimen/setting_icon_size" android:layout_height="@dimen/setting_icon_size" android:layout_marginLeft="@dimen/setting_icon_margin" android:layout_marginRight="@dimen/setting_icon_margin" android:text="" />
                    <Button android:id="@id/setting_follow_twitter" android:background="@drawable/setting_twitter" android:layout_width="@dimen/setting_icon_size" android:layout_height="@dimen/setting_icon_size" android:layout_marginLeft="@dimen/setting_icon_margin" android:layout_marginRight="@dimen/setting_icon_margin" android:text="" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/la_setting_purchase" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:id="@id/ln_setting_group_buy" style="@style/setting_group_lay">
                    <com.xvideostudio.videoeditor.view.RobotoBoldTextView android:text="@string/setting_purchase" style="@style/setting_group_text" />
                </LinearLayout>
                <LinearLayout android:id="@id/ln_setting_buyprobeta" android:visibility="visible" style="@style/setting_lay_single">
                    <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:id="@id/tex_setting_probeta" android:text="@string/setting_pay" style="@style/setting_text" />
                </LinearLayout>
                <LinearLayout android:orientation="vertical" android:id="@id/ln_wipeoff_watermark" android:background="@drawable/ripple_bright_rectangle" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/setting_child_height_sigle">
                    <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/wipe_off_watermark" style="@style/setting_text" />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout android:visibility="gone" style="@style/setting_group_lay">
                <com.xvideostudio.videoeditor.view.RobotoBoldTextView android:text="@string/home_adv_edit" style="@style/setting_group_text" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_square_mode" android:visibility="gone" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/setting_edit_mode" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:id="@id/rl_setting_hardware_acceleration" android:layout_height="wrap_content" android:minHeight="60.0dip" android:layoutDirection="locale" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:layout_gravity="center_vertical" android:id="@id/tvTitleFirst" android:layout_height="wrap_content" android:text="@string/setting_hw_acc_notification_title" style="@style/setting_text" />
                <androidx.appcompat.widget.SwitchCompat android:layout_gravity="center_vertical" android:id="@id/bt_setting_hardware_acceleration" android:padding="6.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="15.0dip" android:checked="true" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/ln_setting_editor" android:background="@drawable/ripple_bright_rectangle" android:focusable="true" android:visibility="gone" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/setting_child_height_with_gray_text">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:layout_marginTop="11.0dip" android:text="@string/set_quality_info1" style="@style/setting_text" />
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:id="@id/tv_setting_quality_subtitle" android:layout_marginBottom="11.0dip" android:text="quality subtitle" style="@style/setting_gray_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/ln_setting_face_resolution" android:background="@drawable/ripple_bright_rectangle" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/setting_child_height_with_gray_text">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:layout_marginTop="11.0dip" android:text="@string/set_face_resolution_info" style="@style/setting_text" />
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:id="@id/tv_setting_face_resolution" android:layout_marginBottom="11.0dip" android:text="quality subtitle" style="@style/setting_gray_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/ln_setting_export_mode" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/set_export_mode" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_watermark" android:visibility="gone" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/set_watermark" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_video_background" android:visibility="gone" style="@style/setting_lay">
                <TextView android:text="@string/set_video_background" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:visibility="gone" style="@style/setting_lay">
                <TextView android:text="@string/set_director_name" style="@style/setting_text" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:id="@id/ln_setting_path" android:background="@drawable/ripple_bright_rectangle" android:focusable="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="@dimen/setting_child_height_with_gray_text">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:layout_marginTop="11.0dip" android:text="@string/export_output_set" style="@style/setting_text" />
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:id="@id/tv_setting_export_subtitle" android:layout_marginBottom="11.0dip" android:text="export subtitle" style="@style/setting_gray_text" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_feekback" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/feedback" style="@style/setting_text" />
            </LinearLayout>
            <LinearLayout style="@style/setting_group_lay">
                <com.xvideostudio.videoeditor.view.RobotoBoldTextView android:id="@id/setting_open_conn_rel_url" android:text="@string/setting_app" style="@style/setting_group_text" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_language_setting" android:visibility="visible" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/setting_language" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_evaluate" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/setting_evaluate" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_about" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/set_l_info3" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <RelativeLayout android:id="@id/ln_setting_update" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:layout_height="wrap_content" android:text="@string/set_l_info2" android:layout_centerVertical="true" style="@style/setting_text" />
                <ImageView android:id="@id/iv_need_update_setting" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="20.0dip" android:src="@drawable/bg_new_version_mark" android:layout_alignParentRight="true" android:layout_centerVertical="true" />
            </RelativeLayout>
            <include layout="@layout/split_line_half" />
            <LinearLayout android:id="@id/llService" android:visibility="gone" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/text_help_feedback" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_guide" android:visibility="gone" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/guide" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_rate" android:visibility="gone" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/settingg_share_friend" style="@style/setting_text" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_terms_privacy" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/privacy_policy" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_terms_user_agreement" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/user_agreement" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_manage_subscription" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/p555" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_disclaimer" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/disclaimer" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_delete_privacy" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/gdpr_delete_privacy" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_changelog" android:visibility="gone" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/changelog_setting" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_sendapp" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/setting_recommend_to_friend" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
            <LinearLayout android:id="@id/ln_setting_sign_out" style="@style/setting_lay">
                <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:text="@string/user_logout" style="@style/setting_text" />
                <include layout="@layout/split_line_half" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>