<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="26.0dip" android:paddingTop="24.0dip" android:paddingRight="20.0dip" android:paddingBottom="23.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textColor="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/trim_mode" />
    <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:textSize="13.699982sp" android:textColor="@color/dialog_text_gray_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="30.0dip" android:text="@string/trim_mode" />
    <RadioGroup android:id="@id/radiogroup1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
        <RadioButton android:textColor="@color/dialog_text_gray_color" android:id="@id/radio_trim_select_part" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/trim_select_part" />
        <RadioButton android:textColor="@color/dialog_text_gray_color" android:id="@id/radio_delete_select_part" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/delete_select_part" />
    </RadioGroup>
    <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:textSize="13.699982sp" android:textColor="@color/dialog_text_gray_color" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="26.0dip" android:text="@string/export_mode" />
    <RadioGroup android:id="@id/radiogroup2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="12.0dip">
        <RadioButton android:textColor="@color/dialog_text_gray_color" android:id="@id/radio_new_file" android:layout_width="fill_parent" android:layout_height="wrap_content" android:checked="true" android:text="@string/new_file" />
        <RadioButton android:textColor="@color/dialog_text_gray_color" android:id="@id/radio_cover_origin_file" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/cover_origin_file" />
    </RadioGroup>
</LinearLayout>