<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:ripple="http://schemas.android.com/apk/res-auto">
    <LinearLayout style="@style/dialog_pop_layout">
        <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:textStyle="bold" android:textColor="@color/white" android:id="@id/tv_login_rewards_title" android:text="@string/login_rewards_title_tip" style="@style/dialog_header_text" />
        <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="left" android:id="@id/tv_login_rewards_last_second_day_tip" android:background="@color/transparent" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dialog_title_margin_left" android:layout_marginTop="5.0dip" android:minWidth="@dimen/dialog_button_min_width" android:text="@string/login_rewards_last_second_day_tip" android:singleLine="false" />
        <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/tv_login_rewards_tip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dialog_title_margin_left" android:layout_marginTop="1.0dip" android:text="@string/login_rewards_first_day_tip" />
        <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:textAppearance="?android:textAppearanceMedium" android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/tv_login_rewards_content" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dialog_title_margin_left" android:layout_marginTop="1.0dip" android:text="@string/login_rewards_contents" />
        <com.xvideostudio.videoeditor.view.RobotoRegularTextView android:textSize="14.0sp" android:textColor="@color/white" android:gravity="left" android:id="@id/tv_login_rewards_purchase_pro_tip" android:background="@color/transparent" android:visibility="visible" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dialog_title_margin_left" android:layout_marginTop="1.0dip" android:minWidth="@dimen/dialog_button_min_width" android:text="@string/login_rewards_purchase_pro_tip" android:singleLine="false" />
        <RadioGroup android:id="@id/rg_login_rewards_expired" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dialog_title_margin_left" android:layout_marginTop="10.0dip">
            <RadioButton android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/rb_login_rewards_expired_yes" android:background="@color/transparent" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/login_rewards_expired_yes" android:drawablePadding="@dimen/dialog_radio_button_drawable_padding" />
            <RadioButton android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/rb_login_rewards_expired_no" android:background="@color/transparent" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:checked="false" android:text="@string/login_rewards_expired_no" android:drawablePadding="@dimen/dialog_radio_button_drawable_padding" />
        </RadioGroup>
        <CheckBox android:textSize="14.0sp" android:textColor="@color/white" android:id="@id/cb_login_rewards_close_push" android:background="@color/transparent" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dialog_title_margin_left" android:layout_marginTop="10.0dip" android:checked="false" android:text="@string/login_rewards_close_push_tip" android:drawablePadding="@dimen/dialog_radio_button_drawable_padding" />
        <RelativeLayout android:layout_width="fill_parent" android:layout_height="30.0dip" android:layout_margin="10.0dip">
            <com.xvideostudio.videoeditor.view.RippleView android:background="@drawable/selector_row" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentRight="true" ripple:rv_type="rectangle" ripple:rv_zoom="true">
                <Button android:textSize="@dimen/dialog_button_text_size" android:textColor="@color/light_pink" android:gravity="center" android:id="@id/bt_login_rewards_ok" android:background="@color/transparent" android:padding="0.0dip" android:layout_width="wrap_content" android:layout_height="fill_parent" android:minWidth="@dimen/dialog_button_min_width" android:text="@string/ok" android:singleLine="true" />
            </com.xvideostudio.videoeditor.view.RippleView>
        </RelativeLayout>
    </LinearLayout>
</FrameLayout>